--- a/src/style/CalcStep1.css
+++ b/src/style/CalcStep1.css
@@ -41,3 +41,18 @@ button.submitButton, button.submitButton:focus, button.submitButton:hover  {
     border: none;
 }
 
+
+.form-label {
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 20px;
+  color: #26143D;
+  text-align: left;
+  margin-bottom: 4px;
+}
+
+p {
+    text-align: left;
+}
