--- a/src/style/App.css
+++ b/src/style/App.css
@@ -22,6 +22,12 @@
   float: left;
   padding-right: 45px;
 }
+@media screen and (max-width: 750px) {
+  .block-1, .block-2, .block-3 {
+    width: 100%;
+    padding-right: 20px;
+  }
+}
 
 .App {
   text-align: center;
@@ -35,4 +41,9 @@
   .App {
     flex-direction: column;
   }
+
+  .ant-form-item-control {
+    width: 100%;
+  }
 }
+
