--- a/src/style/Bread.css
+++ b/src/style/Bread.css
@@ -53,7 +53,8 @@
 @media screen and (max-width: 750px) {
   .Bread {
     border-radius: 30px;
-    min-height: 30px;
+    min-height: 34px;
+    height: 34px;
     padding: 3px 10px;
   }
 
