--- a/src/style/CalcStep1.css
+++ b/src/style/CalcStep1.css
@@ -4,6 +4,15 @@
     text-align: left;
 }
 
+@media screen and (max-width: 750px) {
+    .col {
+        max-width: 100%;
+    }
+    .ant-select {
+        max-width: 100%;
+    }
+}
+
 .calc {
     overflow: hidden;
 }
